[gd_scene load_steps=8 format=2]

[ext_resource path="res://Characters/NPCs/Blueprint/DialogueBox/dialog_ninepatch.png" type="Texture" id=1]
[ext_resource path="res://Fonts/type_writer.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Characters/NPCs/Blueprint/DialogueBox/DialogBox.gd" type="Script" id=3]
[ext_resource path="res://Characters/NPCs/Blueprint/DialogueBox/accept.png" type="Texture" id=4]
[ext_resource path="res://Characters/NPCs/Blueprint/DialogueBox/more.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=1]
size = 8
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=2]
resource_name = "ShowText"
tracks/0/type = "value"
tracks/0/path = NodePath("Label:percent_visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 1.001 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0, 1.0 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "animation_finished"
} ]
}

[node name="DialogBox" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="."]
margin_right = 172.0
margin_bottom = 17.0
texture = ExtResource( 1 )
region_rect = Rect2( 0, 0, 13, 13 )
patch_margin_left = 5
patch_margin_top = 5
patch_margin_right = 5
patch_margin_bottom = 5
axis_stretch_horizontal = 1
axis_stretch_vertical = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 5.0
margin_top = 5.0
margin_right = 170.0
margin_bottom = 13.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.423529, 0.235294, 0.290196, 1 )
align = 1
autowrap = true
max_lines_visible = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/ShowText = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 20.0
one_shot = true
autostart = true

[node name="AcceptButton" type="TextureButton" parent="."]
visible = false
margin_left = 127.0
margin_top = 16.0
margin_right = 172.0
margin_bottom = 33.0
texture_normal = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MoreButton" type="TextureButton" parent="."]
visible = false
margin_left = 143.0
margin_top = 16.0
margin_right = 172.0
margin_bottom = 31.0
texture_normal = ExtResource( 5 )
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="pressed" from="AcceptButton" to="." method="_on_AcceptButton_pressed"]
[connection signal="pressed" from="MoreButton" to="." method="_on_MoreButton_pressed"]
